fix: on mobile phones don't shows map and chart

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,7 +38,6 @@ header h1 {
 main {
     display: flex;
     padding: 1rem 2rem;
-    overflow: hidden;
 }
 
 .covid__page {
